--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-emojione": "^5.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
